--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-spring": "^9.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
@@ -22,6 +24,6 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
-    "vite": "^3.0.0"
+    "vite": "^3.0.4"
   }
 }
